--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -11,3 +11,11 @@
 	border-style: solid;
 	border-color: #e5e7eb;
 }
+
+/* element Plus 样式 */
+.table-op {
+	display: flex;
+	.el-button+.el-button {
+		margin-left: 0;
+	}
+}
