--- a/src/assets/global.less
+++ b/src/assets/global.less
@@ -13,6 +13,11 @@
 }
 
 /* element Plus 样式 */
+
+/* el-table 样式 */
+.el-table {
+	font-size: 13px;
+}
 .table-op {
 	display: flex;
 	.el-button+.el-button {
